--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -534,6 +534,7 @@
     <string name="lock_clock_font_seaweedsc" translatable="false">Seaweed Script</string>
     <string name="lock_clock_font_sedgwick" translatable="false">Sedgwick Ave Display</string>
     <string name="lock_clock_font_snowstorm" translatable="false">Snowstorm</string>
+    <string name="lock_clock_font_sourcesanspro" translatable="false">Source Sans Pro</string>
     <string name="lock_clock_font_themeable" translatable="false">Themeable (or VCR OSD Mono)</string>
     <string name="lock_clock_font_theoutbox" translatable="false">The Outbox</string>
     <string name="lock_clock_font_union" translatable="false">Union</string>
