--- a/res/xml/ion_settings_lockscreen_clock.xml
+++ b/res/xml/ion_settings_lockscreen_clock.xml
@@ -43,4 +43,26 @@
         android:persistent="false"
         ionionizer:units="dp"
         android:defaultValue="54" />
+
+    <PreferenceCategory
+        android:key="text_clock_customizations"
+        android:title="@string/text_clock_customizations" >
+
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="text_clock_alignment"
+            android:title="@string/text_clock_alignment"
+            android:dialogTitle="@string/text_clock_alignment"
+            android:entries="@array/text_clock_entries"
+            android:entryValues="@array/text_clock_values"
+            android:defaultValue="0" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="text_clock_padding"
+            android:title="@string/text_clock_padding"
+            android:max="100"
+            android:min="0"
+            android:dependency="text_clock_alignment"
+            ionionizer:units="dp"
+            android:defaultValue="55" />
+    </PreferenceCategory>
 </PreferenceScreen>
