--- a/res/xml/edgepulse_settings.xml
+++ b/res/xml/edgepulse_settings.xml
@@ -41,10 +41,18 @@
         android:title="@string/edgelight_left" >
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="ambient_notification_light_accent_left"
+            android:title="@string/ambient_notification_light_accent_title"
+            android:summary="@string/ambient_notification_light_accent_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="pulse_ambient_light_auto_color_left"
             android:title="@string/pulse_ambient_light_auto_color_title"
             android:summary="@string/pulse_ambient_light_auto_color_summary"
-            android:defaultValue="true"
+            android:defaultValue="false"
+            android:dependency="ambient_notification_light_accent_left"
             android:disableDependentsState="true" />
 
         <com.ion.ionizer.colorpicker.ColorPickerPreference
@@ -68,10 +76,18 @@
         android:title="@string/edgelight_right" >
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="ambient_notification_light_accent_right"
+            android:title="@string/ambient_notification_light_accent_title"
+            android:summary="@string/ambient_notification_light_accent_summary"
+            android:defaultValue="true"
+            android:disableDependentsState="true" />
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="pulse_ambient_light_auto_color_right"
             android:title="@string/pulse_ambient_light_auto_color_title"
             android:summary="@string/pulse_ambient_light_auto_color_summary"
-            android:defaultValue="true"
+            android:defaultValue="flase"
+            android:dependency="ambient_notification_light_accent_right"
             android:disableDependentsState="true" />
 
         <com.ion.ionizer.colorpicker.ColorPickerPreference
