--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -893,4 +893,14 @@
         <item>3</item>
         <item>4</item>
     </string-array>
+
+    <!-- Edge light Animation -->
+    <string-array name="pulse_ambient_light_anim_entries">
+        <item>@string/pulse_ambient_light_anim_restart</item>
+        <item>@string/pulse_ambient_light_anim_reverse</item>
+    </string-array>
+    <string-array name="pulse_ambient_light_anim_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
