--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -882,6 +882,9 @@
     <string name="pulse_ambient_light_repeat_mode_title">Edge Light Animation</string>
     <string name="pulse_ambient_light_anim_restart">Restart</string>
     <string name="pulse_ambient_light_anim_reverse">Reverse</string>
+    <string name="pulse_ambient_light_layout_title">Edge Light View</string>
+    <string name="pulse_ambient_light_layout_solid">Solid</string>
+    <string name="pulse_ambient_light_layout_faded">Faded</string>
 
     <!-- Notification Vibration -->
     <string name="vibrate_on_notifications_title">Notification vibration</string>
