--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1012,6 +1012,10 @@
     <string name="fod_recog_animation_miui_pulse">Pulse</string>
     <string name="fod_recog_animation_miui_pulse_white">Pulse (White)</string>
     <string name="fod_recog_animation_miui_rhythm">Rhythm</string>
+    <string name="fod_recog_animation_op_cosmos">Cosmos</string>
+    <string name="fod_recog_animation_op_mclaren">McLaren</string>
+    <string name="fod_recog_animation_op_stripe">Stripe</string>
+    <string name="fod_recog_animation_op_wave">Wave</string>
 
     <!-- Burn-in Protection -->
     <string name="navigation_burnin_category">Burn-in Protection</string>
