--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -244,8 +244,8 @@
     <string name="keyboard_rotation_dialog">This feature forces auto-rotate to turn on temporarily while the keyboard is shown.  It has no effect when auto-rotate is already enabled.</string>
     <string name="show_enter_key_title">Show enter key</string>
     <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
-    <string name="ime_switcher_notify">Selector notification</string>
-    <string name="ime_switcher_notify_summary">Display input method selector notification</string>
+    <string name="ime_switcher_notify">Show selector</string>
+    <string name="ime_switcher_notify_summary">Display input method selector</string>
 
     <!-- Show LTE/4G switch -->
     <string name="show_lte_fourgee_title">4G/LTE network icon</string>
