--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1020,6 +1020,7 @@
     <string name="fod_recog_animation_pureview_future">Future</string>
     <string name="fod_recog_animation_pureview_halo_ring">Halo ring</string>
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
+    <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
 
     <!-- Burn-in Protection -->
     <string name="navigation_burnin_category">Burn-in Protection</string>
