--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -996,6 +996,8 @@
     <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
     <string name="qs_bg_use_fw">Use default colors</string>
     <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
+    <string name="qs_bg_use_new_tint">New tint style</string>
+    <string name="qs_bg_use_new_tint_summary">Enable the new QS tint style</string>
 
     <!-- FOD icon picker -->
     <string name="fod_icon_picker_title">FOD icon picker</string>
