--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -207,6 +207,8 @@
     <string name="nav_bar_layout_right">Right-leaning</string>
     <string name="navbar_invert_layout_title">Invert layout</string>
     <string name="recents_style_info_title">Only valid if button navigation mode is used.</string>
+    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
+    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons in navigation bar while typing</string>
 
     <!-- Heads up -->
     <string name="heads_up_notifications">Heads up</string>
