--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1021,6 +1021,8 @@
     <string name="fod_recog_animation_pureview_halo_ring">Halo ring</string>
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
     <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
+    <string name="fod_recog_animation_coloros7_1">ColorOS7 1</string>
+    <string name="fod_recog_animation_coloros7_2">ColorOS7 2</string>
 
     <!-- Burn-in Protection -->
     <string name="navigation_burnin_category">Burn-in Protection</string>
