--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -130,7 +130,7 @@
             android:summary="@string/fod_recog_animation_summary"
             android:defaultValue="false" />
 
-        <com.ion.settings.preferences.SystemSettingListPreference
+        <com.ion.ionizer.preferences.SystemSettingListPreference
             android:key="fod_anim"
             android:title="@string/fod_recog_animation_effect_title"
             android:summary="%s"
