--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -917,7 +917,9 @@
     <!-- Battery bar position -->
     <string-array name="battery_bar_entries" translatable="false">
         <item>@string/sb_battery_bar_hide</item>
-        <item>@string/sb_battery_bar_statusbar</item>
+        <item>@string/sb_battery_bar_statusbar_top</item>
+        <item>@string/sb_battery_bar_statusbar_bottom</item>
+        <item>@string/sb_battery_bar_qs_header</item>
         <item>@string/sb_battery_bar_topnav</item>
         <item>@string/sb_battery_bar_bottomnav</item>
     </string-array>
@@ -925,7 +927,9 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>5</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <!-- Battery bar style -->
