Gestures: back long swipe improvement
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -46,11 +46,12 @@
         android:summary="@string/navigation_bar_arrow_keys_summary"
         android:defaultValue="false" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-        android:key="back_swipe_extended"
-        android:title="@string/back_swipe_extended_title"
-        android:summary="@string/back_swipe_extended_summary"
-        android:defaultValue="false" />
+    <com.ion.ionizer.preferences.SystemSettingListPreference
+        android:key="back_swipe_type"
+        android:title="@string/back_swipe_type_title"
+        android:entries="@array/back_swipe_type_entries"
+        android:entryValues="@array/back_swipe_type_values"
+        android:defaultValue="0" />
 
     <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="long_back_swipe_timeout"
@@ -73,7 +74,7 @@
         <Preference
             android:key="left_swipe_app_action"
             android:title="@string/left_swipe_app_action_title"
-            android:summary="@string/active_edge_app_select_summary">
+            android:summary="@string/back_swipe_app_select_summary">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.LeftBackSwipeCustomApp" />
@@ -94,7 +95,7 @@
         <Preference
             android:key="right_swipe_app_action"
             android:title="@string/right_swipe_app_action_title"
-            android:summary="@string/active_edge_app_select_summary">
+            android:summary="@string/back_swipe_app_select_summary">
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.RightBackSwipeCustomApp" />
