--- a/res/xml/ion_settings_misc.xml
+++ b/res/xml/ion_settings_misc.xml
@@ -62,4 +62,23 @@
             android:dependency="burn_in_protection"
             android:persistent="false" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="adaptive_media"
+        android:title="@string/media_title">
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="adaptive_playback_enabled"
+            android:title="@string/adaptive_playback_title"
+            android:summary="@string/adaptive_playback_summary"
+            android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="adaptive_playback_timeout"
+            android:title="@string/adaptive_playback_timeout_title"
+            android:entries="@array/adaptive_playback_timeout_entries"
+            android:entryValues="@array/adaptive_playback_timeout_values"
+            android:defaultValue="30000"
+            android:dependency="adaptive_playback_enabled" />
+    </PreferenceCategory>
 </PreferenceScreen>
