--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1091,6 +1091,8 @@
     <string name="action_clear_notifications">Clear notifications</string>
     <string name="action_ringer_modes">Ringer modes</string>
     <string name="kill_app">Kill foreground app</string>
+    <string name="skip_song">Skip song</string>
+    <string name="prev_song">Previous song</string>
 
     <!-- Long swipe gestures -->
     <string name="left_swipe_key_title">Left swipe</string>
