--- a/res/xml/ion_settings_navigation.xml
+++ b/res/xml/ion_settings_navigation.xml
@@ -60,6 +60,12 @@
         android:entryValues="@array/long_back_swipe_timeout_values"
         android:defaultValue="2000" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="navigation_bar_ime_space"
+        android:title="@string/navigation_bar_ime_space_title"
+        android:summary="@string/navigation_bar_ime_space_summary"
+        android:defaultValue="true" />
+
     <PreferenceCategory
         android:key="left_swipe"
         android:title="@string/left_swipe_key_title">
