--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1041,4 +1041,8 @@
     <string name="text_clock_left_right">Left-Right</string>
     <string name="text_clock_right_left">Right-Left</string>
     <string name="text_clock_padding">Edge Padding</string>
+
+    <!-- R Notification headers -->
+    <string name="notification_headers_title">Show notification headers</string>
+    <string name="notification_headers_summary">Whether to show R style notification headers (Requires a SystemUI restart)</string>
 </resources>
