--- a/res/xml/ion_settings_notifications.xml
+++ b/res/xml/ion_settings_notifications.xml
@@ -51,6 +51,12 @@
         android:summary="@string/force_expanded_notifications_summary"
         android:defaultValue="false" />
 
+    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+        android:key="notification_headers"
+        android:title="@string/notification_headers_title"
+        android:summary="@string/notification_headers_summary"
+        android:defaultValue="true" />
+
     <PreferenceCategory
         android:title="@string/charging_noti_category" >
 
