--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -913,4 +913,30 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+
+    <!-- Battery bar position -->
+    <string-array name="battery_bar_entries" translatable="false">
+        <item>@string/sb_battery_bar_hide</item>
+        <item>@string/sb_battery_bar_statusbar</item>
+        <item>@string/sb_battery_bar_topnav</item>
+        <item>@string/sb_battery_bar_bottomnav</item>
+    </string-array>
+    <string-array name="battery_bar_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <!-- Battery bar style -->
+    <string-array name="battery_bar_style_entries" translatable="false">
+        <item>@string/sb_battery_bar_reg</item>
+        <item>@string/sb_battery_bar_center</item>
+        <item>@string/sb_battery_bar_reversed</item>
+    </string-array>
+    <string-array name="battery_bar_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
